<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.view.sign.SignUpFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/welcome_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="384dp"
            android:layout_height="384dp"
            android:layout_above="@id/textInputLayoutPhoneNumber"
            android:layout_centerInParent="true"
            android:contentDescription="@string/cd_taxi"
            android:src="@drawable/illustration_taxi" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutPhoneNumber"
            android:layout_above="@id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:hint="@string/phone_number"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldPhoneNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:maxLines="1"
                android:fontFamily="@font/poppins_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonSignUp"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:fontFamily="@font/poppins_bold"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="16dp"
            android:text="@string/sign_up_text" />
    </RelativeLayout>
</LinearLayout>