<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:orientation="vertical"
    tools:context=".ui.view.sign.UserNameFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:fontFamily="@font/poppins_bold"
        android:textAppearance="?attr/textAppearanceHeadline5"
        android:text="@string/finally_text"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="384dp"
            android:layout_height="384dp"
            android:layout_above="@id/textInputLayoutFullName"
            android:layout_centerInParent="true"
            android:layout_marginBottom="32dp"
            android:contentDescription="@string/cd_welcome_character"
            android:scaleType="centerCrop"
            android:src="@drawable/illustration_character" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutFullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@id/buttonComplete"
            android:hint="@string/your_full_name"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textFieldFullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLines="1"
                android:fontFamily="@font/poppins_regular"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/buttonComplete"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:layout_marginTop="16dp"
            android:layout_alignParentBottom="true"
            android:fontFamily="@font/poppins_bold"
            android:text="@string/complete_signing" />
    </RelativeLayout>
</LinearLayout>