<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.view.map.MapsFragment">

    <com.google.android.gms.maps.MapView
        android:id="@+id/mapView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/cd_main_map_view"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="0dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayoutDestination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="18dp"
                    app:endIconDrawable="@drawable/baselina_search"
                    app:endIconMode="custom"
                    android:hint="@string/destination_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/destinationText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:focusable="false"
                        android:fontFamily="@font/poppins_regular"/>
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/buttonCallTaxi"
                    android:layout_width="match_parent"
                    android:layout_height="72dp"
                    android:layout_margin="12dp"
                    android:fontFamily="@font/poppins_bold"
                    android:text="@string/call_taxi"/>
            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/button_update_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/card"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/cd_update_location"
            app:srcCompat="@drawable/baseline_target"
            tools:ignore="RedundantDescriptionCheck" />
    </RelativeLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/button_settings_menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:contentDescription="@string/cd_settings_menu"
        app:shapeAppearanceOverlay="?attr/shapeAppearanceSmallComponent"
        app:srcCompat="@drawable/baseline_menu"
        tools:ignore="RedundantDescriptionCheck" />
</FrameLayout>